# small-backup

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile-small  README.md  build.sh
src/: backup.rs  file_handlers.rs  fs_utils.rs  index_page.rs  main.rs
templates/: file_overview.html
